@@ -1,16 +1,14 @@
 package com.helloword.kidservice.global.utils;
 
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.PutObjectRequest;
-import com.amazonaws.util.IOUtils;
 import com.helloword.kidservice.global.exception.MainException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 import javax.imageio.ImageIO;
 import java.awt.*;
@@ -36,7 +34,7 @@ public class FileService {
 
     private static final int IMAGE_SIZE = 50;
 
-    private final AmazonS3 amazonS3;
+    private final S3Client s3Client;
 
     public String uploadImage(MultipartFile file) {
         validateFile(file, IMAGE_SIZE, new String[]{"jpg", "jpeg", "png"});
@@ -58,13 +56,15 @@ public class FileService {
 
     public String uploadToS3(InputStream inputStream, String fileName, String contentType) {
         try {
-            ObjectMetadata objMeta = new ObjectMetadata();
-            byte[] bytes = IOUtils.toByteArray(inputStream);
-            objMeta.setContentType(contentType);
-            objMeta.setContentLength(bytes.length);
-            amazonS3.putObject(
-                    new PutObjectRequest(bucket, fileName, new ByteArrayInputStream(bytes), objMeta)
-                            .withCannedAcl(CannedAccessControlList.PublicRead));
+            byte[] bytes = inputStream.readAllBytes();
+
+            PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+                    .bucket(bucket)
+                    .key(fileName)
+                    .contentType(contentType)
+                    .build();
+
+            s3Client.putObject(putObjectRequest, RequestBody.fromBytes(bytes));
         } catch (IOException e) {
             throw new MainException(FILE_UPLOAD_FAILED);
         }
